[bdict_wheel]
universal=0

[metadata]
version = attr: ping3.__version__

[tool:pytest]
addopts =
    --verbose
    --doctest-modules
    --cov ping3
    --cov-report term-missing:skip-covered
    --cov-report html
    --cov-report xml
    --flake8
    # Uncomment to enforce a minimum code coverage threshold.
    # --cov-fail-under 50
testpaths = tests
